--- a/index.html
+++ b/index.html
@@ -4,59 +4,93 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GilCoin (GILC) - Memecoin World</title>
+    <link rel="icon" type="image/png" href="41462aea-91df-4932-a28c-bf4ec2bbf883.png" />
     <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(120deg, #fff0f5, #fef5f9); /* ultra-soft pink */
-      color: #333;
-      padding: 20px;
-      max-width: 800px;
-      margin: auto;
-    }
-    h1 {
-      color: #8e24aa;
-    }
-    input, button {
-      padding: 10px;
-      margin: 5px 0;
-      width: 100%;
-      font-size: 16px;
-      border: none;
-    }
-    button {
-      background-color: #8e24aa;
-      color: white;
-      font-weight: bold;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #6a1b9a;
-    }
-    .log {
-      background: #ffffff;
-      color: #000000;
-      border: 1px solid #ccc;
-      padding: 15px;
-      margin-top: 20px;
-      height: 200px;
-      overflow-y: auto;
-    }
-    .balance {
-      background: #e1bee7;
-      padding: 10px;
-      margin-bottom: 10px;
-    }
-    .intro {
-      background: #f3e5f5;
-      padding: 15px;
-      border-left: 5px solid #ce93d8;
-      margin-bottom: 20px;
-    }
-  </style>
+        body {
+          font-family: Arial, sans-serif;
+          background: linear-gradient(120deg, #fff0f5, #fef5f9);
+          color: #333;
+          padding: 20px;
+          max-width: 800px;
+          margin: auto;
+        }
+        h1 {
+          color: #8e24aa;
+          display: flex;
+          align-items: center;
+          gap: 10px;
+        }
+        h1 img {
+          height: 50px;
+          border-radius: 50%;
+        }
+        input, button {
+          padding: 10px;
+          margin: 5px 0;
+          width: 100%;
+          font-size: 16px;
+          border: none;
+        }
+        button {
+          background-color: #8e24aa;
+          color: white;
+          font-weight: bold;
+          border-radius: 4px;
+          cursor: pointer;
+        }
+        button:hover {
+          background-color: #6a1b9a;
+        }
+        .log {
+          background: #ffffff;
+          color: #000000;
+          border: 1px solid #ccc;
+          padding: 15px;
+          margin-top: 20px;
+          height: 200px;
+          overflow-y: auto;
+        }
+        .balance {
+          background: #e1bee7;
+          padding: 10px;
+          margin-bottom: 10px;
+        }
+        .intro {
+          background: #f3e5f5;
+          padding: 15px;
+          border-left: 5px solid #ce93d8;
+          margin-bottom: 20px;
+        }
+        .stats {
+          background: #fce4ec;
+          border-left: 5px solid #f06292;
+          padding: 15px;
+          margin-top: 30px;
+        }
+        .stats h3 {
+          color: #ad1457;
+        }
+        .stats ul {
+          list-style-type: none;
+          padding: 0;
+        }
+        .stats li {
+          margin-bottom: 10px;
+        }
+        code {
+          background: #f3f3f3;
+          padding: 2px 4px;
+          border-radius: 4px;
+          font-family: monospace;
+        }
+    </style>
 </head>
 <body>
-<h1>GilCoin (GILC) - Welcome to GilCoin World!</h1>
+
+<h1>
+    <img src="41462aea-91df-4932-a28c-bf4ec2bbf883.png" alt="GilCoin Logo">
+    GilCoin (GILC) - Welcome to GilCoin World!
+</h1>
 
 <div class="intro">
     <h3>🚀 Launch Message:</h3>
@@ -76,6 +110,26 @@
 
 <div class="log" id="log">
     <em>Transaction log will appear here...</em>
+</div>
+
+<div class="stats">
+    <h3>📊 GilCoin Community Stats</h3>
+    <ul>
+        <li><strong>Total Users:</strong> 2.1 million warriors of wallet</li>
+        <li><strong>Wallets Registered:</strong> 5,245,872 (every alt has a savings account)</li>
+        <li><strong>Transactions Per Day:</strong> 987,000+ (mostly glamour prism purchases)</li>
+        <li><strong>Total GILC in Circulation:</strong> 999,999,999,999 GILC</li>
+        <li><strong>Current Value:</strong> 1 GILC = 0.000069 nice USD</li>
+        <li><strong>Top GilCoin Whales:</strong>
+            <ul>
+                <li><strong>Zenos#1Fan:</strong> 20M GILC – Blew it all on one emote</li>
+                <li><strong>NotAScammer:</strong> 19M GILC – Definitely suspicious</li>
+                <li><strong>CraftDaddy69:</strong> 17M GILC – Controls the glam economy</li>
+                <li><strong>LalaLord:</strong> 15.5M GILC – Short king, long bag</li>
+                <li><strong>HousingSavage:</strong> 12M GILC – Has 3 plots and no shame</li>
+            </ul>
+        </li>
+    </ul>
 </div>
 
 <script>
@@ -115,6 +169,7 @@
       document.getElementById('recipient').value = '';
       document.getElementById('amount').value = '';
     }
-  </script>
+</script>
+
 </body>
 </html>
